log
Thu 09 May 2024 08:47:09 PM UTC: 
 treemap.c | 64 ++++++++++++++++++++++++---------------------------------------
 1 file changed, 24 insertions(+), 40 deletions(-)
 tests:  4|7
total_score: 5/70
9685bee
Thu 09 May 2024 08:51:46 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |   TreeNode *parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd312fd
Thu 09 May 2024 08:52:20 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:5: error: ‘parent’ undeclared (first use in this function)
   60 |     parent = aux;
      |     ^~~~~~
treemap.c:60:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
cd312fd
Thu 09 May 2024 08:52:30 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |   TreeNode *parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9b33c3
Thu 09 May 2024 08:54:42 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
0629469
Thu 09 May 2024 08:57:32 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|6
total_score: 15/70
327ffa6
